Adiciona métodos de remoção e inserção em Query